Finished services page + added scroll modification + added ie modification on gradient text

--- a/services.html
+++ b/services.html
@@ -131,7 +131,7 @@
 
     <section class="main-service">
         <div class="cj-container">
-            <div class="sevise-border">
+            <div class="sevise-border" data-css-animate="trigger">
                 <h2><span>1</span>Strategic Advisory (FREE)</h2>
                 <article>
                     <p>On the first stage of our cooperation we will help you to appraise the strengths, weaknesses, opportunities and threats of your project. After the appraisal our experts will help you to develop “must do” activities plan to solve problems and use advantages. It allows to prepare for entering in the investment market. Their recommendations are based on research of financial reports, market trends, and assessment of competitors.
@@ -146,9 +146,9 @@
 
     <section class="ather-services">
         <div class="cj-container">
-            <div class="row">
-                <div class="col-sm-12 col-md-6 col-lg-4">
-                    <div class="sevise-border">
+            <div class="ather-services-wrapper row">
+                <div class="col-sm-12 col-md-6 col-lg-4 service-list-item">
+                    <div class="sevise-border" data-css-animate="trigger">
                         <h2><span>2</span>ICO in Japan</h2>
                         <article>
                             <ul>
@@ -162,8 +162,8 @@
                         </article>
                     </div>
                 </div>
-                <div class="col-sm-12 col-md-6 col-lg-4">
-                    <div class="sevise-border">
+                <div class="col-sm-12 col-md-6 col-lg-4 service-list-item">
+                    <div class="sevise-border" data-css-animate="trigger">
                         <h2><span>3</span>Marketing</h2>
                         <article>
                             <ul>
@@ -176,8 +176,8 @@
                         </article>
                     </div>
                 </div>
-                <div class="col-sm-12 col-md-6 col-lg-4">
-                    <div class="sevise-border">
+                <div class="col-sm-12 col-md-6 col-lg-4 service-list-item">
+                    <div class="sevise-border" data-css-animate="trigger">
                         <h2><span>4</span>Support</h2>
                         <article>
                             <ul>
@@ -192,7 +192,13 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section><!-- ATHER SERVICES -->
+
+    <section class="services-call-to-action">
+        <div class="cj-container">
+            <h3>Let's change Blockchain together</h3>
+        </div>
+    </section><!-- SERVICES CALL TO ACTION -->
 
     <section class="bottom-links">
         <div class="cj-container">
@@ -240,8 +246,7 @@
         </div>
     </div>
 </footer>
-<div id="preloader"
-style="width: 100%; height: 1000px; position: fixed; background-color: #fff; top:0; left: 0; z-index: 999;"></div>
+<div id="preloader"></div>
 <script src="js/main.js"></script>
 </body>
 </html>
