--- a/about.html
+++ b/about.html
@@ -25,6 +25,7 @@
     <script type="text/javascript" src="js/lib/jquery.gsap.min.js"></script>
     <script type="text/javascript" src="js/lib/TweenMax.min.js"></script>
     <script type="text/javascript" src="js/lib/parallax.min.js"></script>
+    <script type="text/javascript" src="js/lib/jquery.mousewheel.min.js"></script>
 
     <script type="text/javascript" src="js/particles.js"></script>
     <script type="text/javascript" src="js/preloader.js"></script>
@@ -79,24 +80,27 @@
 
     <br><br><br>
 
-    <section class="page-title parallax-window" data-parallax="scroll" data-image-src="img/mask.png">
-        <div class="cj-container">
-            <h1>About us</h1>
-            <ul class="breadcrumbs">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-            </ul>    
-        </div>
+    <section class="page-title parallax-window" data-parallax="scroll" data-image-src="img/about-title-bg.jpg">
+        <div class="page-titke-overlay">
+            <div class="cj-container">
+                <h1>About us</h1>
+                <ul class="breadcrumbs">
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html">About</a></li>
+                </ul>    
+            </div>
+        </div>        
     </section><!-- TITLE -->
 
     <section class="about-description">
         <div class="cj-container">
             <article data-css-animate="trigger">
-                Coinjapan is a utility ICO and blockchain advisory company, headquartered in Tokyo, that combine efforts of open-minded professionals, which are passionate by blockchain technology, cryptomarket, and Japan. We have achieved success in various fields of activity earlier. Now we have joined our efforts to help the development of projects aimed at creating innovative, high-tech commercial and social products of the future based on blockchain technology.
-                Our vision
-                Modern rules of business dictated by the transnational corporations have brought of the era of startups, created “in the garage” to the end but they did not stop the growth of ideas that can change the world. Coinjapan poses a challenge to the new game rules and chooses to the blockchain, cryptocurrency, and ICO. We open the Japanese investment market for any prospective project, regardless of its area utilization and stage of development. 
-                Our goal
-                We are committed to serious and productive activities to attract investment capital into prospective projects. Based on the blokchain technology and our experience of doing business in Japan, we want to enable many startups to enter the Japanese investment market. Our success is measured only by the number of projects that are developing thanks to funds attracted in Japan via ICO.
+               <h2 class="section-header">Who we are</h2>
+               <p>Coinjapan is a utility ICO and blockchain advisory company, headquartered in Tokyo, that combine efforts of open-minded professionals, which are passionate by blockchain technology, cryptomarket, and Japan. We have achieved success in various fields of activity earlier. Now we have joined our efforts to help the development of projects aimed at creating innovative, high-tech commercial and social products of the future based on blockchain technology.</p>
+               <h2 class="section-header">Vision</h2>
+               <p>Modern rules of business dictated by the transnational corporations have brought of the era of startups, created “in the garage” to the end but they did not stop the growth of ideas that can change the world. Coinjapan poses a challenge to the new game rules and chooses to the blockchain, cryptocurrency, and ICO. We open the Japanese investment market for any prospective project, regardless of its area utilization and stage of development. </p>
+               <h2 class="section-header">Our Aim</h2>
+               <p>We are committed to serious and productive activities to attract investment capital into prospective projects. Based on the blokchain technology and our experience of doing business in Japan, we want to enable many startups to enter the Japanese investment market. Our success is measured only by the number of projects that are developing thanks to funds attracted in Japan via cloudfunding.</p>
             </article>
         </div>
     </section><!-- DESCRIPTION -->
@@ -108,7 +112,7 @@
             <div class="cover-bg">
                 <img src="img/coinjapan-sub-logo.png" alt="CoinJapan">
             </div>
-            <iframe class="about-video" src="https://www.youtube.com/embed/riMfIhIb8Rk?autoplay=1&controls=0&loop=1&&playlist=riMfIhIb8Rk&showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+            <iframe class="about-video" style="overflow:hidden" src="https://www.youtube.com/embed/riMfIhIb8Rk?autoplay=1&controls=0&loop=1&&playlist=riMfIhIb8Rk&showinfo=0" frameborder="0" allow="autoplay; encrypted-media" scrolling="no" allowfullscreen></iframe>
         </div>
     </section><!-- SUB-TITLE -->
 
