Updated Page Links

--- a/services.html
+++ b/services.html
@@ -203,10 +203,10 @@
     <section class="bottom-links">
         <div class="cj-container">
             <div class="bottom-links-container">
-                <div class="services-link" data-css-animate="trigger">
-                 <a href="services.html">
+                <div class="about-link" data-css-animate="trigger">
+                 <a href="about.html">
                     <img class="left-bottom-link-arrow" src="img/arrow-in-circle.png" alt="arrow in circle">
-                    <span>Services</span>
+                    <span>About us</span>
                 </a>
             </div>
             <div class="projects-link" data-css-animate="trigger">
