Updated Page Links

--- a/about.html
+++ b/about.html
@@ -122,7 +122,7 @@
             <div class="row team-members">
                 <div class="col-sm-12 col-md-6 col-lg-4">
                     <div class="team-member" data-css-animate="trigger">
-                        <img src="img/member-picture.png" alt="team-member">
+                        <div class="team-member-photo" style="background-image: url('img/member-picture.png')"></div>
                         <h3 class="member-name">Satoshi Mishima</h3>
                         <h4 class="member-position">Founder</h4>
                         <article>
@@ -134,7 +134,7 @@
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-4">
                     <div class="team-member" data-css-animate="trigger">
-                        <img src="img/member-picture.png" alt="team-member">
+                        <div class="team-member-photo" style="background-image: url('img/member-picture.png')"></div>
                         <h3 class="member-name">Golodniy Sergei</h3>
                         <h4 class="member-position">Representative Director</h4>
                         <article>
@@ -147,7 +147,7 @@
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-4">
                     <div class="team-member" data-css-animate="trigger">
-                        <img src="img/member-picture.png" alt="team-member">
+                        <div class="team-member-photo" style="background-image: url('img/team-members/oleg-pavlichenko.jpg')"></div>
                         <h3 class="member-name">Oleh Pavlichenko</h3>
                         <h4 class="member-position">Executive Adviser</h4>
                         <article>
@@ -159,7 +159,7 @@
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-4">
                     <div class="team-member" data-css-animate="trigger">
-                        <img src="img/member-picture.png" alt="team-member">
+                        <div class="team-member-photo" style="background-image: url('img/member-picture.png')"></div>
                         <h3 class="member-name">Artem Timsun</h3>
                         <h4 class="member-position">Head of Communications</h4>
                         <article>
@@ -171,7 +171,7 @@
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-4">
                     <div class="team-member" data-css-animate="trigger">
-                        <img src="img/member-picture.png" alt="team-member">
+                        <div class="team-member-photo" style="background-image: url('img/member-picture.png')"></div>
                         <h3 class="member-name">Vladimir Seferovblockchain</h3>
                         <h4 class="member-position">Architect</h4>
                         <article>
@@ -183,7 +183,7 @@
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-4">
                     <div class="team-member" data-css-animate="trigger">
-                        <img src="img/member-picture.png" alt="team-member">
+                        <div class="team-member-photo" style="background-image: url('img/member-picture.png')"></div>
                         <h3 class="member-name">Medyanik Anastasiya</h3>
                         <h4 class="member-position">Office Manager</h4>
                         <article>
