Created Contact Page

--- a/services.html
+++ b/services.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Home</title>
+    <title>Services</title>
 
     <link rel="stylesheet" href="css/lib/owl.carousel.min.css">
     <link rel="stylesheet" href="css/lib/owl.theme.default.min.css">
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="css/home.css">
     <link rel="stylesheet" href="css/about.css">
     <link rel="stylesheet" href="css/services.css">
+    <link rel="stylesheet" href="css/contacts.css">
 
 
     <script type="text/javascript" src="js/lib/jquery-3.3.1.min.js"></script>
@@ -70,7 +71,7 @@
                         <li><a href="#">Projects</a></li>
                         <li><a href="#">Partners</a></li>
                         <li><a href="#">Carriers</a></li>
-                        <li><a href="#">Contacts</a></li>
+                        <li><a href="contacts.html">Contacts</a></li>
                         <li><a href="#">News</a></li>
                     </ul>
                 </nav>
@@ -131,7 +132,7 @@
 
     <section class="main-service">
         <div class="cj-container">
-            <div class="sevise-border" data-css-animate="trigger">
+            <div class="sevise-border shadow-wrapper" data-css-animate="trigger">
                 <h2><span>1</span>Strategic Advisory (FREE)</h2>
                 <article>
                     <p>On the first stage of our cooperation we will help you to appraise the strengths, weaknesses, opportunities and threats of your project. After the appraisal our experts will help you to develop “must do” activities plan to solve problems and use advantages. It allows to prepare for entering in the investment market. Their recommendations are based on research of financial reports, market trends, and assessment of competitors.
@@ -148,7 +149,7 @@
         <div class="cj-container">
             <div class="ather-services-wrapper row">
                 <div class="col-sm-12 col-md-6 col-lg-4 service-list-item">
-                    <div class="sevise-border" data-css-animate="trigger">
+                    <div class="sevise-border shadow-wrapper" data-css-animate="trigger">
                         <h2><span>2</span>ICO in Japan</h2>
                         <article>
                             <ul>
@@ -163,7 +164,7 @@
                     </div>
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-4 service-list-item">
-                    <div class="sevise-border" data-css-animate="trigger">
+                    <div class="sevise-border shadow-wrapper" data-css-animate="trigger">
                         <h2><span>3</span>Marketing</h2>
                         <article>
                             <ul>
@@ -177,7 +178,7 @@
                     </div>
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-4 service-list-item">
-                    <div class="sevise-border" data-css-animate="trigger">
+                    <div class="sevise-border shadow-wrapper" data-css-animate="trigger">
                         <h2><span>4</span>Support</h2>
                         <article>
                             <ul>
