--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="css/home.css">
     <link rel="stylesheet" href="css/about.css">
     <link rel="stylesheet" href="css/services.css">
+    <link rel="stylesheet" href="css/contacts.css">
 
     <script type="text/javascript" src="js/lib/jquery-3.3.1.min.js"></script>
     <script type="text/javascript" src="js/lib/bootstrap.min.js"></script>
@@ -58,7 +59,7 @@
                     <li><a href="#">Projects</a></li>
                     <li><a href="#">Partners</a></li>
                     <li><a href="#">Carriers</a></li>
-                    <li><a href="#">Contacts</a></li>
+                    <li><a href="contacts.html">Contacts</a></li>
                     <li><a href="#">News</a></li>
                 </ul>
             </nav>
