Added Projects Page

--- a/projecs.html
+++ b/projecs.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Contacts</title>
+    <title>About US</title>
 
     <link rel="stylesheet" href="css/lib/owl.carousel.min.css">
     <link rel="stylesheet" href="css/lib/owl.theme.default.min.css">
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="css/common.css">
     <link rel="stylesheet" href="css/footer.css">
     <link rel="stylesheet" href="css/header.css">
+
     <link rel="stylesheet" href="css/home.css">
     <link rel="stylesheet" href="css/about.css">
     <link rel="stylesheet" href="css/services.css">
@@ -62,10 +63,10 @@
                         <li><a href="index.html">Home</a></li>
                         <li><a href="about.html">About</a></li>
                         <li><a href="services.html">Services</a></li>
-                        <li><a href="projects.html">Projects</a></li>
+                        <li><a class="active-nav-item" href="projects.html">Projects</a></li>
                         <li><a href="#">Partners</a></li>
                         <li><a href="#">Carriers</a></li>
-                        <li><a class="active-nav-item" href="contacts.html">Contacts</a></li>
+                        <li><a href="contacts.html">Contacts</a></li>
                         <li><a href="#">News</a></li>
                     </ul>
                 </nav>
@@ -85,82 +86,85 @@
     <section class="page-title parallax-window" data-parallax="scroll" data-image-src="img/about-title-bg.jpg">
         <div class="page-titke-overlay">
             <div class="cj-container">
-                <h1>Contacts</h1>
+                <h1>Projects</h1>
                 <ul class="breadcrumbs">
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="contacts.html">Contacts</a></li>
+                    <li><a href="projects.html">Projects</a></li>
                 </ul>    
             </div>
         </div>        
     </section><!-- TITLE -->
 
-    <section class="our-contacts">
-    	<div class="cj-container">
-    		<div class="row our-contacts-wrapper">
-    			<div class="col-lg-6 col-md-12 order-lg-last order-md-first">
-    				<img src="img/about-title-bg.jpg" alt="????">
-    			</div>
-    			<div  class="col-lg-6 col-md-12 order-lg-first order-md-last">
-    				<div data-css-animate="trigger" class="contact-offices">
-    					<div class="contact-office-title">CoinJapan KIEV</div>
-    					<div class="contact-office-adress">Adres</div>
-    					<div class="contact-office-phone">+00 00 00 00 00</div>
-    					<div class="contact-office-email">info@coinjapan.com</div>
-    				</div>
-    				<div data-css-animate="trigger" class="contact-offices">
-    					<div class="contact-office-title">CoinJapan MINSK</div>
-    					<div class="contact-office-adress">Adres</div>
-    					<div class="contact-office-phone">+00 00 00 00 00</div>
-    					<div class="contact-office-email">info@coinjapan.com</div>
-    				</div>
-    			</div>
-    		</div>
-    	</div>
-    </section><!-- OUR-CONTACTS -->
+    <section class="projects-in-numbers">
+        <div class="cj-container">
+            <h2 class="section-header" data-css-animate="trigger">Projects in numbers</h2>
+            <div class="row projects-wrapper">
+                <div class="col-sm-12 col-md-4 project">
+                    <h3>Collected funds</h3>
+                    <p class="partners-number-large">
+                        <span class="achivment-amount" data-projectsAutocount="field" data-from="1" data-to="15">15</span>
+                    </p>
+                </div>
+                <div class="col-sm-12 col-md-4 project middle-project-border">
+                    <h3>Collected funds</h3>
+                    <p class="partners-number-large partners-number-gradient">
+                        <span class="achivment-amount" data-projectsAutocount="field" data-from="1" data-to="15">15</span>
+                    </p>
+                </div>
+                <div class="col-sm-12 col-md-4 project">
+                    <h3>Collected funds</h3>
+                    <p class="partners-number-medium">
+                        $<span class="achivment-amount" data-projectsAutocount="field" data-from="267" data-to="400">400</span>
+                        <span class="project-description">Million</span>
+                    </p>
+                </div>
+                <div class="col-sm-12 col-md-4 project">
+                    <h3>Collected funds</h3>
+                    <p class="partners-number-medium">
+                        $<span class="achivment-amount" data-projectsAutocount="field" data-from="267" data-to="400">400</span>
+                        <span class="project-description">Million</span>
+                    </p>
+                </div>
+                <div class="col-sm-12 col-md-4 project middle-project-border">
+                    <h3>Collected funds</h3>
+                    <p class="partners-number-medium">
+                        $<span class="achivment-amount" data-projectsAutocount="field" data-from="267" data-to="400">400</span>
+                        <span class="project-description">Million</span>
+                    </p>
+                </div>
+                <div class="col-sm-12 col-md-4 project">
+                    <h3>Collected funds</h3>
+                    <p class="partners-number-medium">
+                        $<span class="achivment-amount" data-projectsAutocount="field" data-from="267" data-to="400">400</span>
+                        <span class="project-description">Million</span>
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section><!-- PROJECTS-IN-NUBMBERS -->
 
-    <section class="contact-form">
-    	<div class="cj-container">
-    		<h2 class="section-header" data-css-animate="trigger">Сontact Us Now</h2>
-    		<div class="contact-form-bg">
-    			<div class="contact-form-wrapper shadow-wrapper">
-    				<form action="POST">
-    					<div class="cj-form-group">
-    						<label class="contact-form-label contact-form-required" for="name">Name</label>
-    						<input class="contact-form-input" type="text" name="name" id="name">
-    					</div>
-    					<div class="cj-form-group">
-    						<label class="contact-form-label contact-form-required" for="email">Mail ID</label>
-    						<input class="contact-form-input" type="text" name="email" id="email">
-    					</div>
-    					<div class="cj-form-group">
-    						<label class="contact-form-label" for="phone">Telephone</label>
-    						<input class="contact-form-input" type="text" name="phone" id="phone">
-    					</div>
-    					<div class="cj-form-group">
-    						<label class="contact-form-label" for="company">Company Name</label>
-    						<input class="contact-form-input" type="text" name="company" id="company">
-    					</div>
-    					<div class="cj-form-group">
-    						<label class="contact-form-label" for="message">Message</label>
-    						<textarea class="contact-form-textarea" name="message" id="message"></textarea>
-    					</div>
-    					<div class="cj-form-group row">
-    						<div class="col-sm-12 col-md-12 col-lg-6"></div>
-    						<div class="col-sm-12 col-md-12 col-lg-6">
-    							<div class="cj-btn-container">
-    								<button type="submit" class="cj-btn" data-css-animate="trigger"><span>Send</span></button>
-					            </div>
-    						</div>
-    					</div>
-    				</form>
-    			</div>
-    		</div>
-    	</div>
-    </section><!-- CONTACT-FORM -->
+    <section class="projects-in-numbers"></section><!-- PROJECTS-PARTNERS -->
 
-    <section id="map" class="contacts-map">
-    	
-    </section><!-- CONTACTS-MAP -->
+    <section class="projects-in-numbers"></section><!-- PROJECTS-REVIEWS -->
+
+    <section class="bottom-links">
+        <div class="cj-container">
+            <div class="bottom-links-container">
+                <div class="services-link" data-css-animate="trigger">
+                   <a href="about.html">
+                    <img class="left-bottom-link-arrow" src="img/arrow-in-circle.png" alt="arrow in circle">
+                    <span>About us</span>
+                </a>
+            </div>
+            <div class="projects-link" data-css-animate="trigger">
+                <a href="services.html">
+                    <span>Services</span>
+                    <img src="img/arrow-in-circle.png" alt="arrow in circle">
+                </a>
+            </div>
+        </div>
+    </div>
+</section><!-- LINKS -->
 
 <footer class="footer">
     <div class="footer-container">
@@ -192,6 +196,5 @@
 
 <div id="preloader"></div>
 <script src="js/main.js"></script>
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDBwY9f3meuCBvcVK20P8RkGlxYQMbhz08"></script>
 </body>
 </html>
