--- a/about.html
+++ b/about.html
@@ -61,7 +61,7 @@
                         <li><a href="index.html">Home</a></li>
                         <li><a class="active-nav-item" href="about.html">About</a></li>
                         <li><a href="services.html">Services</a></li>
-                        <li><a href="#">Projects</a></li>
+                        <li><a href="projects.html">Projects</a></li>
                         <li><a href="#">Partners</a></li>
                         <li><a href="#">Carriers</a></li>
                         <li><a href="contacts.html">Contacts</a></li>
@@ -208,8 +208,8 @@
                 </a>
             </div>
             <div class="projects-link" data-css-animate="trigger">
-                <a href="#">
-                    <span>Projects</span>
+                <a href="projecs.html">
+                    <span>Projecs</span>
                     <img src="img/arrow-in-circle.png" alt="arrow in circle">
                 </a>
             </div>
@@ -245,7 +245,7 @@
     </div>
 </footer>
 
-<div id="preloader" style="width: 100%; height: 1000px; position: fixed; background-color: #fff; top:0; left: 0; z-index: 999;"></div>
+<div id="preloader"></div>
 <script src="js/main.js"></script>
 </body>
 </html>
