--- a/services.html
+++ b/services.html
@@ -68,7 +68,7 @@
                         <li><a href="index.html">Home</a></li>
                         <li><a href="about.html">About</a></li>
                         <li><a class="active-nav-item" href="services.html">Services</a></li>
-                        <li><a href="#">Projects</a></li>
+                        <li><a href="projects.html">Projects</a></li>
                         <li><a href="#">Partners</a></li>
                         <li><a href="#">Carriers</a></li>
                         <li><a href="contacts.html">Contacts</a></li>
