--- a/index.html
+++ b/index.html
@@ -321,8 +321,7 @@
         </div>
     </div>
 </footer>
-<div id="preloader"
-     style="width: 100%; height: 1000px; position: fixed; background-color: #fff; top:0; left: 0; z-index: 999;"></div>
+<div id="preloader"></div>
 <script src="js/main.js"></script>
 </body>
 </html>
