--- a/about.html
+++ b/about.html
@@ -9,8 +9,9 @@
     <link rel="stylesheet" href="css/lib/owl.theme.default.min.css">
     <link rel="stylesheet" href="css/lib/animate.min.css">
     <link rel="stylesheet" href="css/lib/bootstrap.min.css">
-    <link rel="stylesheet" href="css/fonts.css">
+    <link rel="stylesheet" href="css/lib/fontawesome-all.min.css">
 
+    <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/common.css">
     <link rel="stylesheet" href="css/footer.css">
     <link rel="stylesheet" href="css/header.css">
@@ -19,13 +20,14 @@
     <link rel="stylesheet" href="css/services.css">
     <link rel="stylesheet" href="css/contacts.css">
 
+
     <script type="text/javascript" src="js/lib/jquery-3.3.1.min.js"></script>
     <script type="text/javascript" src="js/lib/bootstrap.min.js"></script>
     <script type="text/javascript" src="js/lib/owl.carousel.min.js"></script>
     <script type="text/javascript" src="js/lib/jquery.spincrement.min.js"></script>
     <script type="text/javascript" src="js/lib/jquery.gsap.min.js"></script>
     <script type="text/javascript" src="js/lib/TweenMax.min.js"></script>
-    <script type="text/javascript" src="js/lib/parallax.min.js"></script>
+    <!-- <script type="text/javascript" src="js/lib/parallax.min.js"></script> -->
     <script type="text/javascript" src="js/lib/jquery.mousewheel.min.js"></script>
 
     <script type="text/javascript" src="js/particles.js"></script>
@@ -37,7 +39,7 @@
     <script type="text/javascript" src="js/menuHandler.js"></script>
     <script type="text/javascript" src="js/goToTop.js"></script>
     <script type="text/javascript" src="js/breadcrump.js"></script>
-    <script type="text/javascript" src="js/paralax.js"></script>
+    <!-- <script type="text/javascript" src="js/paralax.js"></script> -->
 </head>
 <body>
     <div class="cj-container">
@@ -79,9 +81,7 @@
         </div>
     </header><!-- HEADER -->
 
-    <br><br><br>
-
-    <section class="page-title parallax-window" data-parallax="scroll" data-image-src="img/about-title-bg.jpg">
+    <section class="page-title parallax-window about-title-bg">
         <div class="page-titke-overlay">
             <div class="cj-container">
                 <h1>About us</h1>
@@ -95,6 +95,8 @@
 
     <section class="about-description">
         <div class="cj-container">
+
+
             <article data-css-animate="trigger">
                <h2 class="section-header">Who we are</h2>
                <p>Coinjapan is a utility ICO and blockchain advisory company, headquartered in Tokyo, that combine efforts of open-minded professionals, which are passionate by blockchain technology, cryptomarket, and Japan. We have achieved success in various fields of activity earlier. Now we have joined our efforts to help the development of projects aimed at creating innovative, high-tech commercial and social products of the future based on blockchain technology.</p>
@@ -195,6 +197,7 @@
                     </div>
                 </div>
             </div>
+            <i class="fas fa-angle-double-up"></i>
         </div>
     </section><!-- TEAM -->
 
