--- a/contacts.html
+++ b/contacts.html
@@ -26,7 +26,7 @@
     <script type="text/javascript" src="js/lib/jquery.spincrement.min.js"></script>
     <script type="text/javascript" src="js/lib/jquery.gsap.min.js"></script>
     <script type="text/javascript" src="js/lib/TweenMax.min.js"></script>
-    <script type="text/javascript" src="js/lib/parallax.min.js"></script>
+    <!-- <script type="text/javascript" src="js/lib/parallax.min.js"></script> -->
     <script type="text/javascript" src="js/lib/jquery.mousewheel.min.js"></script>
 
     <script type="text/javascript" src="js/particles.js"></script>
@@ -38,7 +38,7 @@
     <script type="text/javascript" src="js/menuHandler.js"></script>
     <script type="text/javascript" src="js/goToTop.js"></script>
     <script type="text/javascript" src="js/breadcrump.js"></script>
-    <script type="text/javascript" src="js/paralax.js"></script>
+    <!-- <script type="text/javascript" src="js/paralax.js"></script> -->
 </head>
 <body>
     <div class="cj-container">
