--- a/services.html
+++ b/services.html
@@ -19,7 +19,6 @@
     <link rel="stylesheet" href="css/services.css">
     <link rel="stylesheet" href="css/contacts.css">
 
-
     <script type="text/javascript" src="js/lib/jquery-3.3.1.min.js"></script>
     <script type="text/javascript" src="js/lib/bootstrap.min.js"></script>
     <script type="text/javascript" src="js/lib/owl.carousel.min.js"></script>
@@ -32,7 +31,7 @@
     <script type="text/javascript" src="js/lib/jquery.spincrement.min.js"></script>
     <script type="text/javascript" src="js/lib/jquery.gsap.min.js"></script>
     <script type="text/javascript" src="js/lib/TweenMax.min.js"></script>
-    <script type="text/javascript" src="js/lib/parallax.min.js"></script>
+    <!-- <script type="text/javascript" src="js/lib/parallax.min.js"></script> -->
 
     <script type="text/javascript" src="js/particles.js"></script>
     <script type="text/javascript" src="js/preloader.js"></script>
@@ -43,7 +42,7 @@
     <script type="text/javascript" src="js/menuHandler.js"></script>
     <script type="text/javascript" src="js/goToTop.js"></script>
     <script type="text/javascript" src="js/breadcrump.js"></script>
-    <script type="text/javascript" src="js/paralax.js"></script>
+    <!-- <script type="text/javascript" src="js/paralax.js"></script> -->
 </head>
 <body>
 
