Fixed scrool homt title bottom

--- a/about.html
+++ b/about.html
@@ -95,21 +95,31 @@
 
     <section class="about-description">
         <div class="cj-container">
-
-
-            <article data-css-animate="trigger">
-               <h2 class="section-header">Who we are</h2>
-               <p>Coinjapan is a utility ICO and blockchain advisory company, headquartered in Tokyo, that combine efforts of open-minded professionals, which are passionate by blockchain technology, cryptomarket, and Japan. We have achieved success in various fields of activity earlier. Now we have joined our efforts to help the development of projects aimed at creating innovative, high-tech commercial and social products of the future based on blockchain technology.</p>
-               <h2 class="section-header">Vision</h2>
-               <p>Modern rules of business dictated by the transnational corporations have brought of the era of startups, created “in the garage” to the end but they did not stop the growth of ideas that can change the world. Coinjapan poses a challenge to the new game rules and chooses to the blockchain, cryptocurrency, and ICO. We open the Japanese investment market for any prospective project, regardless of its area utilization and stage of development. </p>
-               <h2 class="section-header">Our Aim</h2>
-               <p>We are committed to serious and productive activities to attract investment capital into prospective projects. Based on the blokchain technology and our experience of doing business in Japan, we want to enable many startups to enter the Japanese investment market. Our success is measured only by the number of projects that are developing thanks to funds attracted in Japan via cloudfunding.</p>
-            </article>
+            <div class="row no-gutters">
+                <div class="col-12">
+                    <article class="about-description-main-text">
+                         <h2>Who we are</h2>
+                       <p>Coinjapan is a utility ICO and blockchain advisory company, headquartered in Tokyo, that combine efforts of open-minded professionals, which are passionate by blockchain technology, cryptomarket, and Japan. We have achieved success in various fields of activity earlier. Now we have joined our efforts to help the development of projects aimed at creating innovative, high-tech commercial and social products of the future based on blockchain technology.</p>
+                    </article>
+                </div>
+                <div class="col-md-6">
+                    <img src="img/about-descrption-img.jpg" alt="description image">
+                </div>
+                <div class="col-md-6">
+                     <article data-css-animate="trigger">
+                      
+                       <h2 class="section-header">Vision</h2>
+                       <p>Modern rules of business dictated by the transnational corporations have brought of the era of startups, created “in the garage” to the end but they did not stop the growth of ideas that can change the world. Coinjapan poses a challenge to the new game rules and chooses to the blockchain, cryptocurrency, and ICO. We open the Japanese investment market for any prospective project, regardless of its area utilization and stage of development. </p>
+                       <h2 class="section-header">Our Aim</h2>
+                       <p>We are committed to serious and productive activities to attract investment capital into prospective projects. Based on the blokchain technology and our experience of doing business in Japan, we want to enable many startups to enter the Japanese investment market. Our success is measured only by the number of projects that are developing thanks to funds attracted in Japan via cloudfunding.</p>
+                    </article>
+                </div>
+            </div>
         </div>
     </section><!-- DESCRIPTION -->
 
     
-
+<!-- 
     <section class="about-sub-title">
         <div class="cj-container">
             <div class="cover-bg">
@@ -117,7 +127,8 @@
             </div>
             <iframe class="about-video" style="overflow:hidden" src="https://www.youtube.com/embed/riMfIhIb8Rk?autoplay=1&controls=0&loop=1&&playlist=riMfIhIb8Rk&showinfo=0" frameborder="0" allow="autoplay; encrypted-media" scrolling="no" allowfullscreen></iframe>
         </div>
-    </section><!-- SUB-TITLE -->
+    </section> -->
+    <!-- SUB-TITLE -->
 
     <section class="about-team">
         <div class="cj-container">
@@ -202,7 +213,7 @@
     </section><!-- TEAM -->
 
     <section class="bottom-links">
-        <div class="cj-container">
+        <div class="cj-container background-color-grey">
             <div class="bottom-links-container">
                 <div class="services-link" data-css-animate="trigger">
                  <a href="services.html">
